# pwm-fan-ctrl

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: main.c
